--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -8,13 +8,14 @@ on:
 
 jobs:
   build-cli:
-    name: ${{ matrix.os }} - ${{ matrix.backend }}
-    runs-on: sdk-windows-8-core-2
+    name: windows_${{ matrix.arch }}
+    runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
       matrix:
-        os: [windows]
-        backend: [llama-cpp-cpu, llama-cpp-vulkan, llama-cpp-cuda]
+        include:
+          - runner: sdk-windows-8-core-2
+            arch: x86_64
 
     steps:
       - name: Checkout repository
@@ -37,29 +38,41 @@ jobs:
           cache-dependency-path: runner/go.sum
 
       - name: Setup MinGW
-        run: choco install mingw -y
-
-      - name: Build Nexa Cli
-        run: make build
+        run: |
+          choco install mingw -y
+          g++ --version
 
       - name: Download runtime
         run: |
-          make download BRIDGE_BACKEND=${{ matrix.backend }}
+          cd runner
+          make download ARCH=${{ matrix.arch }}
+
+      - name: Build Nexa Cli
+        run: |
+          cd runner
+          make build ARCH=${{ matrix.arch }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: nexa-cli_${{ matrix.os }}_${{ matrix.backend }}
-          path: build
+          name: nexa-cli_windows_${{ matrix.arch }}
+          path: runner/build
           include-hidden-files: true
 
   build-installer:
     name: Build Windows Installer & Release
-    runs-on: sdk-windows-8-core-2
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     needs: build-cli
+    runs-on: ${{ matrix.runner }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - runner: sdk-windows-8-core-2
+            arch: x86_64
     env:
       VERSION: ${{ github.ref_name }}
+      ARCH: ${{ matrix.arch }}
 
     steps:
       - name: Checkout repository
@@ -80,7 +93,7 @@ jobs:
 
       - name: Build launcher with PyInstaller
         run: |
-          pyinstaller --onefile --noconsole --distpath artifacts --name "nexa-cli-launcher" --icon="release/nexa_logo.ico" release/nexa_windows_launcher.py
+          pyinstaller --onefile --noconsole --distpath artifacts --name "nexa-cli-launcher" --icon="runner/release/windows/nexa_logo.ico" runner/release/windows/nexa_launcher.py
 
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v4.1.0
@@ -117,7 +130,7 @@ jobs:
       - name: Compile Installer
         uses: Minionguyjpro/Inno-Setup-Action@v1.2.6
         with:
-          path: release/nexa_installer.iss
+          path: runner/release/windows/nexa_installer.iss
           options: /O+
 
       - name: Sign Installer
@@ -131,7 +144,7 @@ jobs:
             --azure-key-vault-tenant-id "${{ secrets.AZURE_TENANT_ID }}" `
             -tr http://timestamp.globalsign.com/tsa/advanced `
             -td sha256 `
-            "artifacts/nexa-cli_windows-setup.exe"
+            "artifacts/nexa-cli_windows_${{ matrix.arch }}.exe"
 
       - name: Create GitHub Release
         id: create_release
@@ -139,7 +152,7 @@ jobs:
         with:
           repository: NexaAI/nexa-sdk
           tag_name: ${{ env.VERSION }}
-          files: artifacts/nexa-cli_windows-setup.exe
+          files: artifacts/nexa-cli_windows_${{ matrix.arch }}.exe
           make_latest: true
         env:
           GITHUB_TOKEN: ${{ secrets.ZACK_ACCESS_TOKEN }}
