--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
 name: Test
 
 on:
-  pull_request:
-    branches: [main, main-test]
+  # pull_request:
+  #   branches: [main, main-test]
   workflow_dispatch:
 
 jobs:
