fix: remove ml.h after build

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -48,6 +48,7 @@ jobs:
         run: |
           cd runner
           make build
+          rm build/ml.h
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
@@ -91,7 +92,6 @@ jobs:
       - name: Fix dylib Linkages (RPATH)
         run: |
           RESOURCES_PATH="${{ env.APP_PATH }}/Contents/Resources"
-          find "${RESOURCES_PATH}" -type f \( -name "*.dylib" -o -name "*.so" \) -maxdepth 2 -exec install_name_tool -change @rpath/libc++.1.dylib /usr/lib/libc++.1.dylib {} \;
           install_name_tool -add_rpath "@loader_path" "${RESOURCES_PATH}/nexa-cli"
 
       - name: Import Code Signing Certificates
