--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,7 @@ __debug_bin
 
 # TLS certificates
 *.pem
+/.swiftpm
+/bindings/ios/Example/Example.xcodeproj/project.xcworkspace/xcuserdata
+/bindings/ios/NexaAI/.swiftpm
+/.build
