--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -38,15 +38,17 @@ jobs:
           cache-dependency-path: runner/go.sum
 
       - name: Download runtime
+        shell: bash
         run: |
           cd runner
           make download ARCH=${{ matrix.arch }}
 
       - name: Build Nexa Cli
+        shell: bash
         run: |
           cd runner
           make build ARCH=${{ matrix.arch }}
-          Remove-Item build/ml.h
+          rm build/ml.h
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
