--- a/runner/Makefile
+++ b/runner/Makefile
@@ -8,7 +8,7 @@ ifeq ($(OS), Windows_NT)
     RM_FILE := cmd /c del /f /q
     RM_DIR  := cmd /c rmdir /s /q
     MKDIR   := cmd /c mkdir
-    UNZIP   := powershell -Command "Expand-Archive -Path 'nexasdk-bridge.zip' -DestinationPath '.' -Force"
+    UNZIP   := powershell -Command "Expand-Archive -Force -DestinationPath . -Path"
 else
     UNAME := $(shell uname -s)
     ARCH  := $(shell uname -m)
@@ -53,11 +53,7 @@ download: clean
 	@echo "BRIDGE_VERSION: $(BRIDGE_VERSION)"
 	curl -L -o build/nexasdk-bridge.zip \
 		https://nexa-model-hub-bucket.s3.us-west-1.amazonaws.com/public/nexasdk/$(BRIDGE_VERSION)/$(OS)_$(ARCH)/nexasdk-bridge.zip
-ifeq ($(OS), windows)
-	cd build && $(UNZIP) && $(RM_FILE) nexasdk-bridge.zip
-else
 	cd build && $(UNZIP) nexasdk-bridge.zip && $(RM_FILE) nexasdk-bridge.zip
-endif
 
 clean:
 	-$(RM_DIR) build
